# stats_pkmn

./: Accueil.py  README.md  cols.txt  pyproject.toml  requirements.txt
data/: etude_pkmn.ipynb  q2.csv  q3.csv  q4.csv  q5.csv  q6.csv  q7.csv
pages/: 1_Qui_êtes-vous.py  2_Votre_relation_avec_Pokémon.py  3_Contenu_de_vos_collections.py  4_Votre_consommation.py  5_Les_analyses.py
pages/.streamlit/: pages.toml
utils/: data.py  viz.py
